--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "0.0.1",
   "description": "Simple API Testing Application",
   "main": "app/app.js",
-  "dependencies": {},
-  "devDependencies": {},
   "scripts": {
+    "start": "electron app/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,5 +23,17 @@
   "bugs": {
     "url": "https://github.com/Shakup/apiquest/issues"
   },
-  "homepage": "https://github.com/Shakup/apiquest#readme"
+  "homepage": "https://github.com/Shakup/apiquest#readme",
+  "dependencies": {},
+  "devDependencies": {
+    "electron-prebuilt": "^0.35.0",
+    "lea": "^1.1.0",
+    "grunt": "latest",
+    "grunt-browserify": "^4.0.1",
+    "grunt-contrib-cssmin": "~0.12.2",
+    "grunt-contrib-sass": "~0.9.2",
+    "grunt-contrib-uglify": "~0.8.0",
+    "grunt-contrib-watch": "latest",
+    "grunt-notify": "^0.4.1"
+  }
 }
